--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,10 @@
 {
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "node index.js"
+  },
+  
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
